tests/cases/compiler/class1.ts
interface foo{ } // error
class foo{ } // error